typo and conf update

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ description = "bilingual speech, psycholinguistics & corpus methods"
 affiliation = "phd candidate at ubc linguistics"
 affiliationLink = "https://linguistics.ubc.ca/profile/khia-johnson/"
 profilePicture = "/images/profile.jpg"
-keywords = ["bilingualism", "speech science", "psycholinguistics", "language data", "rstats"]
+keywords = ["bilingualism", "speech science", "psycholinguistics", "language data", "rstats", "phonetics", "voice", "corpus linguistics"]
 favicon = "/favicons/"
 indexDateFormat = "Jan 2, 2006"
 listDateFormat = "Jan 2"
