reorder research interests

--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ pygmentsUseClasses = true
 [params]
 title = "Khia A. Johnson"
 author = "Khia A. Johnson"
-description = "bilingual speech, psycholinguistics & corpus methods"
+description = "psycholinguistics, bilingualism, speech perception & production"
 affiliation = "phd candidate at ubc linguistics"
 affiliationLink = "https://linguistics.ubc.ca/profile/khia-johnson/"
 profilePicture = "/images/profile.jpg"
