--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ pygmentsUseClasses = true
 [params]
 title = "Khia A. Johnson"
 author = "Khia A. Johnson"
-description = "psycholinguistics, bilingualism, speech perception & production"
+description = "bilingual speech, corpus linguistics & experimental design"
 affiliation = "phd candidate at ubc linguistics"
 affiliationLink = "https://linguistics.ubc.ca/profile/khia-johnson/"
 profilePicture = "/images/profile.jpg"
