slight revise to bio

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ pygmentsUseClasses = true
 [params]
 title = "Khia A. Johnson"
 author = "Khia A. Johnson"
-description = "bilingual speech, corpus linguistics & experimental design"
+description = "bilingual speech+voice, corpus linguistics, language data, social context"
 affiliation = "phd candidate at ubc linguistics"
 affiliationLink = "https://linguistics.ubc.ca/profile/khia-johnson/"
 profilePicture = "/images/profile.jpg"
