--- a/config.yml
+++ b/config.yml
@@ -27,12 +27,12 @@ params:
 
     ShowReadingTime: true
     ShowShareButtons: true
-    ShowPostNavLinks: false
+    ShowPostNavLinks: true
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     disableSpecial1stPost: true
     disableScrollToTop: false
-    comments: true
+    comments: false
     hidemeta: false
     hideSummary: false
     showtoc: false
@@ -69,10 +69,10 @@ params:
               url: cv
             - name: blog
               url: post
-            # - name: types-of-posts
-            #   url: categories
-            - name: search
-              url: search
+            - name: categories
+              url: categories
+            # - name: search
+            #   url: search
 
     # home-info mode
     # homeInfoParams:
@@ -129,14 +129,14 @@ menu:
           name: blog
           url: /post/
           weight: 20
-        # - identifier: categories
-        #   name: types-of-posts
-        #   url: /categories/
-        #   weight: 30
-        - identifier: search
-          name: search
-          url: /search/
+        - identifier: categories
+          name: categories
+          url: /categories/
           weight: 30
+        # - identifier: search
+        #   name: search
+        #   url: /search/
+        #   weight: 30
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
 # markup:
