--- a/config.yml
+++ b/config.yml
@@ -65,11 +65,11 @@ params:
         imageHeight: 200
         imageTitle: Headshot of Khia A. Johnson
         buttons:
-            - name: research/cv
+            - name: "research/cv"
               url: cv
-            - name: blog
+            - name: "blog"
               url: post
-            - name: categories
+            - name: "categories"
               url: categories
 
     # home-info mode
@@ -117,6 +117,13 @@ params:
         threshold: 0.4
         minMatchCharLength: 0
         keys: ["title", "permalink", "summary", "content"]
+
+outputs:
+    home:
+        - HTML
+        - RSS
+        - JSON # is necessary
+
 menu:
     main:
         - identifier: cv
