--- a/config.yml
+++ b/config.yml
@@ -22,8 +22,8 @@ params:
     author: Khia A. Johnson
     images: ["favicons/apple-touch-icon.png"]
     DateFormat: "2 Jan 2006"
-    defaultTheme: auto # dark, light
-    disableThemeToggle: false
+    defaultTheme: light # auto, dark, light
+    disableThemeToggle: true
 
     ShowReadingTime: true
     ShowShareButtons: true
@@ -39,7 +39,7 @@ params:
     tocopen: false
 
     assets:
-        # disableHLJS: true # to disable highlight.js
+        disableHLJS: true # to disable highlight.js
         # disableFingerprinting: true
         favicon: "favicons/favicon.ico"
         favicon16x16: "favicons/favicon-16x16.png"
@@ -49,8 +49,8 @@ params:
 
     label:
         text: "Khia A. Johnson"
-        # icon: "favicons/apple-touch-icon.png"
-        # iconHeight: 25
+        icon: "/images/memoji.png"
+        iconHeight: 35
 
     # profile-mode
     profileMode:
@@ -144,10 +144,10 @@ menu:
 
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
-# markup:
-#     highlight:
-#         # anchorLineNos: true
-#         codeFences: true
-#         guessSyntax: true
-#         lineNos: true
-#         style: monokai
+markup:
+    highlight:
+        # anchorLineNos: true
+        codeFences: true
+        guessSyntax: true
+        lineNos: false
+        style: monokailight
