--- a/config.yml
+++ b/config.yml
@@ -57,7 +57,7 @@ params:
         enabled: true # needs to be explicitly set
         title: Khia A. Johnson
         subtitle: |+
-          👋🏼 I'm a Ph.D. Candidate @ UBC Linguistics. I'm curious about bilingualism, phonetics, voice, corpus linguistics, language technology, and how social context impacts all of these areas. I mostly blog about (working with) speech data.
+          👋🏼 I'm a Ph.D. Candidate @ UBC Linguistics. I'm curious about bilingualism, voice, corpus linguistics, language technology, and how social context impacts all of these areas. I occasionally blog about (working with) speech and language data.
         imageUrl: "/images/profilesmall.jpg"
         imageWidth: 250
         imageHeight: 250
@@ -84,8 +84,8 @@ params:
           url: "https://github.com/khiajohnson/"
         - name: email
           url: "/contact"
-        # - name: rss
-        #   url: "/index.xml"
+        - name: rss
+          url: "/index.xml"
 
     analytics:
         google:
