--- a/config.yml
+++ b/config.yml
@@ -26,7 +26,7 @@ params:
     disableThemeToggle: true
 
     ShowReadingTime: true
-    ShowShareButtons: true
+    ShowShareButtons: false
     ShowPostNavLinks: true
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
@@ -83,7 +83,7 @@ params:
         - name: github
           url: "https://github.com/khiajohnson/"
         - name: email
-          url: "/contact"
+          url: "mailto:hello@khiajohnson.com?body=Hello Khia, "
         - name: rss
           url: "/index.xml"
 
