--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ minify:
 params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
     title: Khia Johnson, PhD
-    description: "psycholinguist & ux researcher | personal website"
+    description: "psycholinguist & ux research scientist | personal website"
     keywords: [Blog, Portfolio, UX research, Bilingualism, Speech, Data, Rstats, Phonetics, Voice, Corpus, Linguistics, Psycholinguistics]
     author: Khia Johnson
     images: ["/images/profilewide.jpg", "/images/profilesmall.jpg"]
@@ -56,7 +56,7 @@ params:
     profileMode:
         enabled: true # needs to be explicitly set
         title: Khia Johnson, PhD
-        subtitle: UX Researcher • Psycholinguist • Phonetician
+        subtitle: UX Research Scientist, Audio • Psycholinguist
         bio: |+
 
           I study how humans experience, perceive and interact with novel audio and communication technologies. My interests include speech perception/production, computer-mediated communication, quantitative research methods (with a splash of qual), R programming, and mentoring for graduate students considering tech careers. My pronouns are she/her/hers.
