--- a/config.yml
+++ b/config.yml
@@ -136,10 +136,10 @@ menu:
           name: blog
           url: /post/
           weight: 30
-        - identifier: search
-          name: 🔍
-          url: search
-          weight: 40
+        # - identifier: search
+        #   name: 🔍
+        #   url: search
+        #   weight: 40
 
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
